# Einkaufsliste

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  gource.ini  root.cmake  test.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml  linux.yml  windows.yml
Einkaufsliste/: .clang-format  .clang-tidy  CMakeLists.txt  CodeAnalysis.cmake  root.cmake
Einkaufsliste/docs/: file.md  startup.md
Einkaufsliste/includes/biz/: application.h  argument_parser.h  command_line_interface.h  entry.h  open_convertion_files.h  open_recipe.h  patcher.h  updater.h
Einkaufsliste/includes/common/: change_recipe_name.h  command_chain.h  file.h  i_command.h  i_file.h  i_file_impl.h  json_parser.h  log_on_console.h  md_parser.h  observable.h  open_convertion_files.h  open_recipe.h  print_current_file.h  recipe.h  unit.h  unit_convertion.h
Einkaufsliste/includes/interface/: i_command.h  i_command_memento.h  i_file.h  i_file_impl.h  i_frontend.h  i_hub.h  i_logger.h  i_observer.h
Einkaufsliste/src/: application.cpp  argument_parser.cpp  change_recipe_name.cpp  command_chain.cpp  command_line_interface.cpp  entry.cpp  file.cpp  i_command.cpp  i_file.cpp  i_logger.cpp  json_parser.cpp  log_on_console.cpp  main.cpp  md_parser.cpp  open_convertion_files.cpp  open_recipe.cpp  patcher.cpp  print_current_file.cpp  recipe.cpp  start_argument_parser.cpp  unit.cpp  unit_convertion.cpp  updater.cpp
Einkaufsliste/tests/: CMakeLists.txt
Einkaufsliste/tests/e2etests/: CMakeLists.txt
Einkaufsliste/tests/e2etests/assets/: exampleRecipe.md
Einkaufsliste/tests/e2etests/src/: test.cpp
Einkaufsliste/tests/itests/: CMakeLists.txt
Einkaufsliste/tests/itests/src/: recipe_test.cpp
Einkaufsliste/tests/src/: argument_parser_test.cpp
Einkaufsliste/tests/utests/: CMakeLists.txt
Einkaufsliste/tests/utests/src/: command_chain_test.cpp  command_test.cpp  file_implimentation_test.cpp  log_on_console_test.cpp  logger_test.cpp  md_parser_test.cpp  observer_test.cpp  unit_test.cpp
docs/: command.md  file.md
includes/biz/: add_list_recipe.h  add_list_week.h  add_recipe_unit.h  add_week_recipe.h  application.h  argument_parser.h  change_recipe_description.h  change_recipe_name.h  command_line_interface.h  compile_list.h  entry.h  github_updater.h  log_on_console.h  open_conversion_files.h  open_convertion_files.h  open_list.h  open_recipe.h  open_week.h  patcher.h  print_current_file.h  remove_recipe_unit.h  remove_week_recipe.h  updater.h
includes/common/: command_chain.h  json_parser.h  list.h  md_parser.h  observable.h  platform.h  recipe.h  unit.h  unit_conversion.h  unit_convertion.h  updater_template_method.h  updater_template_methode.h  week.h
includes/interface/: i_command.h  i_command_memento.h  i_file.h  i_file_impl.h  i_frontend.h  i_logger.h  i_observer.h  i_updater_template_method.h
src/: add_list_recipe.cpp  add_list_week.cpp  add_recipe_unit.cpp  add_week_recipe.cpp  application.cpp  argument_parser.cpp  change_recipe_description.cpp  change_recipe_name.cpp  command_chain.cpp  command_line_interface.cpp  compile_list.cpp  entry.cpp  github_updater.cpp  i_file.cpp  i_logger.cpp  i_updater_template_method.cpp  json_parser.cpp  list.cpp  log_on_console.cpp  main.cpp  md_parser.cpp  open_conversion_files.cpp  open_convertion_files.cpp  open_list.cpp  open_recipe.cpp  open_week.cpp  patcher.cpp  platform_linux.cpp  platform_windows.cpp  print_current_file.cpp  recipe.cpp  remove_recipe_unit.cpp  remove_week_recipe.cpp  unit.cpp  unit_conversion.cpp  unit_convertion.cpp  updater.cpp  updater_template_method.cpp  updater_template_methode.cpp  week.cpp  (+1 more)
tests/dependencytests/: CMakeLists.txt
tests/dependencytests/src/: cpr_curl_test.cpp  eleven_zip_test.cpp  json_nlohmann_test.cpp
tests/e2etests/: CMakeLists.txt
tests/e2etests/assets/: exampleConvertion.md  exampleConvertion2.md  exampleRecipe.md
tests/e2etests/assets/conversion/: exampleConversion.md
tests/e2etests/assets/convertion/: exampleConvertion2.md
tests/e2etests/src/: test.cpp
tests/itests/: CMakeLists.txt
tests/itests/src/: recipe_test.cpp
tests/manualtests/: CMakeLists.txt
tests/manualtests/src/: start_process_test.cpp
tests/utests/: CMakeLists.txt
tests/utests/assets/: stuff.txt
tests/utests/patch/: version.txt
tests/utests/src/: add_list_recipe_test.cpp  add_list_week_test.cpp  add_recipe_unit_test.cpp  add_week_recipe_test.cpp  argument_parser_test.cpp  change_recipe_description_test.cpp  change_recipe_name_test.cpp  command_chain_test.cpp  compile_list_test.cpp  file_implementation_test.cpp  file_implimentation_test.cpp  github_updater_test.cpp  log_on_console_test.cpp  logger_test.cpp  md_parser_test.cpp  observer_test.cpp  open_list_test.cpp  open_recipe_test.cpp  open_week_test.cpp  remove_recipe_unit_test.cpp  remove_week_recipe_test.cpp  unit_test.cpp
tests/utility/: assets_folder_fixture.h
